Update to Include Example XPO Object and Automapper for Data Contracts

--- a/ExampleAPI.csproj
+++ b/ExampleAPI.csproj
@@ -6,6 +6,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Models\ORMDataModel.xpo" />
+    <None Remove="Models\ORMDataModel.xpo.diagram" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.0.0" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.0.1" />
     <PackageReference Include="DevExpress.Xpo" Version="20.1.7" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="9.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.8" />
@@ -13,6 +20,12 @@
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="3.1.8" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Models\ExampleXPOModel.xpo.diagram">
+      <AutoGen>True</AutoGen>
+    </None>
   </ItemGroup>
 
 
