Updated all the Nuget Packages... Added Nlog and RabbitMQ as well as code for Handling CORS

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,8 @@
 {
   "Logging": {
+    "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Trace",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
@@ -12,12 +13,21 @@
   },
   "SwaggerOptions": {
     "JsonRoute": "swagger/{documentName}/swagger.json",
-    "Description": "Our API",
+    "Description": "ExampleAPI",
     "UIEndpoint": "v1/swagger.json"
   },
   "JwtSettings": {
+    "Issuer": "ExampleAPI",
     "Secret": "SomeReallyAwesomeSecretThatIsHardToGuess",
     "TokenLifetime": "01:00:00"
+  },
+  "rabbit": {
+    "UserName": "Username",
+    "Password": "RandoPassword",
+    "HostName": "SomeServer",
+    "VHost": "VhostDetails",
+    "Port": 5672,
+    "AppName": "ExampleAPI"
   }
 
 }
